Added more to OC/FTB/NH/SH. Removed Footer, reorg'd discords page

--- a/src/content/docs/crescent/northhorn.mdx
+++ b/src/content/docs/crescent/northhorn.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Occult Crescent: South Horn"
-description: "Specific information regarding Occult Crescent: South Horn"
+title: "Occult Crescent: North Horn"
+description: Coming in 7.55
 tableOfContents:
   minHeadingLevel: 2
 ---
@@ -19,9 +19,4 @@ import Footer from '@components/Footer.astro'
 />
 <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
 
-## Occult Crescent
-## Phantom Jobs
-## Vendors
-## Gold Farming
-## Critical Engagements
-## FATEs
+### Coming Soon...
