--- a/src/content/docs/crescent/occult.mdx
+++ b/src/content/docs/crescent/occult.mdx
@@ -21,9 +21,16 @@ Occult Crescent was released in 7.25 is Dawntrail's featured Field Operation sim
 the legend of the real-world Bermueda Triangle. Occult Crescent draws parallels from the myths that many ships and explorers alike seem to go missing out of thin air but with the added notion of 
 treasure and glory to be earned from conquering the Triangle.
 
+Currently, to enter Occult Crescent you must have completed the questline start with "One Last Hurrah" (starts in Tuliyollal (X:17.1, Y:11.8)) up to Umfamiliar Territory to unlock the South Horn. You must also be
+on a combat job and have a minimum item level of 690. Occult Crescent does sync item levels to 700 as a note! So any materia on gear above i700 will be completely disabled. This is
+important for later when talking about the Field Op's gear progression.
+
 ### Phantom Jobs
 While exploring the Occult Crescent you can equip various Phantom Jobs that will augment your playstyle in supportive, defensive, or offense ways.
 There are currently 13 available phantom jobs to level and master, each with their own gimmick. With future patches (7.45 and 7.55) more Phantom Jobs will become available to the player.
+
+<br></br>
+<hr></hr>
 
 ### In-Zone Leveling
 Similar to Eureka/Bozja there is a separate leveling system, two this time actually. 
@@ -37,13 +44,17 @@ And there is a <u>Phantom Job Level</u> which is specific to the phantom job
 you currently have equipped. Leveling phantom jobs will not only unlock or upgrade your phantom actions but fully leveling, or "mastering", a phantom job will grant you a stacking mastery bonus for every mastered
 phantom job. This mastery bonus will increase both your damage and healing potency by 2% for each stack.
 
-### FATEs and CEs
+<br></br>
+<hr></hr>
+## FATEs and CEs
 Occult also draws parallels to Bozja in that there are smaller, faster encounters using the FATE system and then larger, more intense battles through Critical Engagements (CEs). It further mixes Eureka and Bozja
 together by allowing certain CEs to be "prepped" by killing a specific mob on the off chance it spawns an encounter. Currently, the CEs are mixed in that some spawn overtime and others spawn by prepping.
 - [South Horn Critical Engagements](/crescent/southhorn#critical-engagements)
 - [South Horn FATEs](/crescent/southhorn#FATEs)
 
-### Mob Chaining
+<br></br>
+<hr></hr>
+## Mob Chaining
 Mob Chaining returns in Occult Crescent. Chaining is when you kill mobs of a certain level within a window of time between each kill. The window of time shrinking as the chain grows longer, but the rewards
 improving the higher your chain goes. Currently, to chain mobs you must kill mobs higher than your party's average level. The level of mob required going up with each additional party member. This caps around 
 7 or 8 levels higher when you reach an 8-member party. Currently, chaining only rewards Enlightenment Gold Pieces, Knowledge Level XP, and Phantom Job XP.
@@ -58,8 +69,14 @@ improving the higher your chain goes. Currently, to chain mobs you must kill mob
 | 7-8           | 7-8 levels above |
 </div>
 
-### Currencies in Occult Crescent
-#### Enlightenment Silver Pieces
+<br></br>
+<hr></hr>
+## Currencies in Occult Crescent
+There are currently 3 different types of currency that are all earned in (mostly) unique ways and change be exchanged for mounts, glamours, gear progression, ciphers for forked tower, or
+other resources to aide you in taking on the Crescent. There is silver which is only from FATEs, CEs, and Bunnys/Pots. Gold which can only be earned from chaining mobs or Bunnys/Pots. Then Sanguinite which is
+the Forked Tower: Blood exclusive currency (similar to Eurekan Fragments from Baldesian).
+
+### Enlightenment Silver Pieces
 Enlightenment Silver Pieces are *only* earned by doing FATEs, CEs, and opening pot/bunny coffers in the South Horn. 
 <div style="display:flex; justify-content: center;">
 | Activity | Amount Earned |
@@ -72,24 +89,27 @@ Enlightenment Silver Pieces are *only* earned by doing FATEs, CEs, and opening p
 
 Silver pieces are primarily used for both purchasing and augmented Arcanaut's gear.
 You can see a full list of items available to purchase by visiting the Expedition Antiquarian in base camp. Noteable items include:
+<details>
+<summary>Noteable Silver Items to Buy</summary>
 <div style="display:flex; justify-content: center;">
-| Item | Use | Cost |
+| Item | Cost | Use |
 | :---: | :---: | :--: |
-| **South Horn Riding Map** | Increases mount speed, makes travelling and getting to FATEs much easier. | 3,000 |
-| **Ph. Time Mage** | Slows/dispels mobs, hastens yourself or allies. Required for Forked Tower. | 1,000 |
-| **Ph. Cannoneer** | Strong AoE damage. Has stronger/longer trick attack. Perfect for gold farming! | 1,000 |
-| **Ph. Chemist** | Healing, MP refills, and the only way to raise people in Forked Tower. | 1,000 |
-| **Aetherspun Silver** | Used in augmented Arcanaut's gear from base to the +1 variant. | 1,200 |
-| **Sanguine Ciphers** | Costs 600 but you get 800 on each FT clear. Can pay itself back in reclears. | 600 |
-| **Ancient Airship** | 4-seater mount. Definitely save this for last! | 5,000 | 
+| **South Horn Riding Map** | 3,000 | Increases mount speed, makes travelling and getting to FATEs much easier. |
+| **Ph. Time Mage** | 1,000 | Slows/dispels mobs, hastens yourself or allies. Required for Forked Tower. | 
+| **Ph. Cannoneer** | 1,000 | Strong AoE damage. Has stronger/longer trick attack. Perfect for gold farming! | 
+| **Ph. Chemist** | 1,000 | Healing, MP refills, and the only way to raise people in Forked Tower. | 
+| **Aetherspun Silver** | 1,200 | Used in augmented Arcanaut's gear from base to the +1 variant. | 
+| **Sanguine Ciphers** |  600 | Costs 600 but you get 800 on each FT clear. Can pay itself back in reclears. |
+| **Ancient Airship** | 5,000 | 4-seater mount. Definitely save this for last! | 
 </div>
+</details>
 
-#### Enlightenment Gold Pieces
+### Enlightenment Gold Pieces
 Enlightenment Gold Pieces are *only* earned by chaining mobs or opening pot/bunny coffers in the South Horn.
 <div style="display:flex; justify-content: center;">
 | Activity | Amount Earned |
 | :---: | :---: |
-| **Mobs** | Varied |
+| **Mobs** | Varied, higher level = more gold |
 | **Crit. Engagements** | 200 |
 | **Pot Chests** | 160/480/1,600 |
 | **Bunny Chests** | 1,600|
@@ -100,34 +120,43 @@ When above a chain of 20, any gold earned will be doubled! So keep that chain go
 
 Gold pieces are primarily used for purcahse **Aetherial Fixatives** for augmenting Arcanaut's gear.
 You can see a full list of items available to purchase by visiting the Expedition Antiquarian in base camp. Noteable items include:
+<details>
+<summary>Noteable Gold Items to Buy</summary>
 <div style="display:flex; justify-content: center;">
-| Item | Use | Cost |
+| Item | Cost | Use |
 | :---: | :---: | :--: |
-| **Aetherial Fixatives** | Used in augmented Arcanaut's gear from base to the +1 variant. | 3,000 |
-| **Ph. Samurai** | Strongest DPS option in Occult Crescent right now. | 1,000 |
-| **Ph. Geomancer** | Damage Buff/Healing Bells. Can Suspend self/party. Required for Forked Tower | 1,000 |
-| **Ph. Thief** | Healing, MP refills, and the only way to raise people in Forked Tower. | 1,000 |
-| **Sanguine Ciphers** | Used to enter Forked Tower. Costs 960 gold but accumulates fast when farming in a dedicated group. | 960 |
-| **Coffers/Potions** | Items used by Ph. Samurais/Chemists. Alternative to spending gil if no other uses for gold. | 50 |
+| **Ph. Samurai** |  1,000 | Strongest DPS option in Occult Crescent right now. |
+| **Ph. Geomancer** | 1,000 | Damage Buff/Healing Bells. Can Suspend self/party. Required for Forked Tower | 
+| **Ph. Thief** |  1,000 | Healing, MP refills, and the only way to raise people in Forked Tower. |
+| **Aetherial Fixatives** | 3,000 | Used in augmented Arcanaut's gear from base to the +1 variant. | 
+| **Sanguine Ciphers** |  960 | Used to enter Forked Tower. Costs 960 gold but accumulates fast when farming in a dedicated group. |
+| **Coffers/Potions** | 50 | Items used by Ph. Samurais/Chemists. Alternative to spending gil if no other uses for gold. | 
 </div>
+</details>
 
-#### Sanguinite
+### Sanguinite
 Forked Tower: Blood exclusive currency. Earned from completing encounters and finding hidden chests throughout the tower. A max of 30 sanguinite can be potentially earned
 per clear. Sanguinite is mostly used to purchase X-Fixatives which are used in augmenting Arcanaut's gear from +1 to +2.
 
 You can see a full list of items available to purchase by visiting the Expedition Antiquarian in base camp. Noteable items include:
-<div style="display:flex; justify-content: center;">
-| Item | Use | Cost |
-| :---: | :---: | :--: |
-| **X-Fixatives** | Used in augmented Arcanaut's gear from +1 to the +2 variant. | 10 |
-| **Psamathe** | Pink-ish Dead Stars minion | 6 |
-| **Naiad** | Purple Dead Stars minion | 6 |
-| **Deimos** | Green Dead Stars minion | 6 |
-| **Crescent Furniture** | Housing items unique to Occult Crescent | Varied |
-| `/twirl` emote | Unique emote only found in South Horn | 30 |
-</div>
 
-### Treasure Coffers
+<details>
+<summary>Noteable Sanguinite Items to Buy</summary>
+<div style="display:flex; justify-content: center;">
+| Item | Cost | Use |
+| :---: | :---: | :--: |
+| **X-Fixatives** | 10 | Used in augmented Arcanaut's gear from +1 to the +2 variant. | 
+| **Psamathe** | 6 | Pink-ish Dead Stars minion | 
+| **Naiad** |  6 | Purple Dead Stars minion |
+| **Deimos** |  6 | Green Dead Stars minion |
+| **Furniture** |  Varied | Housing items unique to Occult Crescent |
+| `/twirl` emote | 30 | Unique emote only found in South Horn | 
+</div>
+</details>
+
+<br></br>
+<hr></hr>
+## Treasure Coffers
 Around Occult Crescent you will find randomly coffers spread around the various landscapes. These coffers come in two varities: Bronze and Silver. 
 Both contain mounts, hairstyles, materia, party favors, materials required for gear progression, and so much more.
 These are spawned in by doing things such as completing FATEs, CEs, clearing Forked Tower: Blood (South Horn Specific), and earning gold pieces from killed mobs.
@@ -147,13 +176,19 @@ You can visit <a href="https://gacha.infi.ovh/occult/?territory=1&coffer=1596" t
 their respective coffer.
 :::
 
-### Persistent Pots
+<br></br>
+<hr></hr>
+## Persistent Pots
 Similar to Eureka Bunnies, the Persistent and Pleading Pots FATEs, that when completed succesfully, will grant you extra special rewards if you are lucky to obtain a magical elixir. Using the elixir and
 ensuring the Persistent Pot companion you just obtained does not die, the pot will guide around to a hidden coffer. These coffers are either bronze, silver and gold. Each one rarer than the last but containing
 more and more rewards. As of 7.3, pots will now give both enlightenment silver and gold pieces from opening their coffers. 
-- Bronzes (50% spawn) will grant 100 silver, 160 gold
-- Silvers (40% spawn) will grant 300 silver, 480 gold
-- Golds (10% spawn) will grant 1000 silver, 1600 gold
+<div style="display:flex; justify-content: center;">
+| Coffer | Spawn % | Rewards |
+| :--: | :--: | :--: |
+| Bronze | 50% | 100 silver, 160 gold|
+| Silver | 40% | 300 silver, 480 gold |
+| Gold | 10% | 1000 silver, 1600 gold |
+</div>
 
 On rare occasions (~10% of the time), the pot companion will stick around and will offer to take you to *another* hidden coffer. You should take them up on this offer because these 
 "double ups" will **always** garauntee a gold coffer.
@@ -163,7 +198,9 @@ You can visit <a href="https://gacha.infi.ovh/occult/?territory=2&coffer=2014743
 their respective coffer.
 :::
 
-### Fortune Carrots
+<br></br>
+<hr></hr>
+## Fortune Carrots
 The Happy Bunnies do make a grand return in the form of Fortune Carrots. Sometimes when exploring around Occult Crescent you will run across a half-eaten, glowing carrot on the ground.
 If you are so lucky enough to have a Fortune Carrot item in your inventory, you can use this near said floor-carrot to spawn a Happy Bunny who will thank you with a golden coffer!
 This coffer contains materia, 1,000 Enlightenment Silver Pieces, and 1,600 Enlightenment Gold Pieces.
@@ -177,5 +214,74 @@ their respective coffer.
 :::
 
 
-### Gearing and Best in Slot
-Gearing in Occult Crescent is currently done by obtaining pieces of Arcanaut's Gear in South Horn. Each piece costs 4,000 enlightenment silver pieces and 
+<br></br>
+<hr></hr>
+## Gearing
+Each Field Op features a brand new armor set that has it's own unique set of effects specific for that zone. This time we have the ilvl 745 armor called Arcanaut's 
+Gear which features a main stat bonuses and a stat called "Special Attribute". 
+
+:::note[What is Special Attribute?]
+This "Special Attribute" stat increases phantom job action damage by ~1% for every point you have equipped, 
+currently maxing out around +15 in total with a full set of Arcanaut's +2 gear. 
+:::
+
+You can purchase all 7 sets of Arcanaut's gear from the Expedition Antiquarian in Base Camp for 4,000 Enlightened Silver pieces for each separate armor piece. 
+This armor can also be upgraded at the Expedition Armorer to increase the amount of bonus main stat and special attribute given.
+
+:::danger[Melding Arcanaut's Gear]
+Arcanaut's gear can be melded but the melds will not work inside the South Horn since the zone syncs your item level to 700. 
+This will, similar to all cases of item level syncing in FFXIV, disables any materia in gear that is greater than the ilvl sync of an instance/zone. 
+However any pieces at or below i700 (such as Neo-Kingdom accessories) still allow their materia to function as normal. 
+Many Best in Slots sets will feature these pieces so make sure you keep up on your daily/weekly hunts!
+:::
+
+### Upgrading Arcanaut's Gear
+For now, you can purchase upgrade materials from Expedition Antiquarian for both silver, gold and the Forked Tower: Blood exclusive Sanguinite. 
+
+Each upgrade increases the main stat by +40 and grants one point of special attirbute each. Below is a list of required materials you must present, 
+along with the armor piece itself, to the Expedition Armorer in Base Camp.
+
+To upgrade a piece from base to +1 you need...
+<div style="display:flex; justify-content: center;">
+| Item | Amount | Cost |
+| :--: | :--: | :--: |
+| Base Arcanut's | 1 | 4,000 silver |
+| Aetherspun Silver | 3 | 3,600 silver |
+| Aetherial Fixative | 3 | 4,800 gold |
+</div>
+
+To upgrade a piece from +1 to +2 you need...
+<div style="display:flex; justify-content: center;">
+| Item | Amount | Cost |
+| :--: | :--: | :--: |
+| Arcanaut's +1 | 1 | See above table |
+| Aetherspun Gold | 3 | Random Coffer Drop|
+| X-Fixative | 6 | 60 Sanguinite |
+</div>
+
+<details>
+<summary>Open to see costs for a singular full set and all 7 sets</summary>
+In total each set will run you...
+<div style="display:flex; justify-content: center;">
+| Item/Currency | Amount |
+| :--: | :--: |
+| Silver | 38,000 |
+| Gold | 24,000 |
+| Aetherspun Gold | 15 |
+| Sanguinite | 300 |
+</div>
+
+All 7 sets costs...
+<div style="display:flex; justify-content: center;">
+| Item/Currency | Amount |
+| :--: | :--: |
+| Silver | 266,000 |
+| Gold | 168,000 |
+| Aetherspun Gold | 105 |
+| Sanguinite | 2100 |
+</div>
+</details>
+
+### Best in Slot
+Best in slot of Occult Crescent is maximizing the amount of Special Attibute you have. This is currently achieved by wearing a full set of Arcanaut's gear and augmenting it to the +2 version. 
+At max, you should have an extra 600 main stat and 15 special attribute or ~15% more damage on phantom actions.
