--- a/src/content/docs/others/discords.mdx
+++ b/src/content/docs/others/discords.mdx
@@ -12,27 +12,20 @@ import Footer from "@components/Footer.astro";
   onload="document.documentElement.classList.add('sl-theme-dark');"
 />
 <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
+Below are featured Discords that organize all kinds of prog/reclear groups for the various Field Ops. This does include groups to help level/farm too!
 
-### Primal ###
-    - <a href="https://discord.gg/foexiv" target="_blank">Field Ops Enjoyers</a> - All Forays
-    - <a href="https://discord.gg/thehelplines" target="_blank">The Help Lines</a> - BA focused, sometimes runs DRS
-
-### Crystal ###
-    - <a href="https://discord.gg/c-a-f-e" target="_blank">Crystalline Adventuring Forays and Expeditions</a> - All Field Operations
-    - <a href="https://discord.gg/cem" target="_blank">Crystal Exploratory Missions</a> - DRS/Bozja focused
-
-### Aether ###
-    - <a href="https://discord.gg/abbaffxiv" target="_blank">Aether Bozja/Baldesian Arsenal</a> - All Field Operations
-
-### Dynamis ###
-    - <a href="https://discord.gg/vjwYEeubeN" target="_blank">Dynamis Field Operations</a> - All Field Operations
+- <a href="https://discord.gg/foexiv" target="_blank">Field Ops Enjoyers</a> - NA DCs
+- <a href="https://discord.gg/thehelplines" target="_blank">The Help Lines</a> - Primal based
+- <a href="https://discord.gg/c-a-f-e" target="_blank">Crystalline Adventuring Forays and Expeditions</a> - Crystal based
+- <a href="https://discord.gg/cem" target="_blank">Crystal Exploratory Missions</a> - Crystal Based
+- <a href="https://discord.gg/abbaffxiv" target="_blank">Aether Bozja/Baldesian Arsenal+</a> - Aether based 
+- <a href="https://discord.gg/vjwYEeubeN" target="_blank">Dynamis Field Operations</a> - Dynamis based
 <br></br>
 
 :::note[Want to get your Discord here?]
     - DM me on Discord @ **onlymlems**! I'll try to respond as soon as possible.
     - Please include a link to your Discord server and what data center it's based out of.
 :::
-<Footer />
 
 
 
