Added bis sheets, added pjobs page, fix index buttons

--- a/src/content/docs/crescent/occult.mdx
+++ b/src/content/docs/crescent/occult.mdx
@@ -1,6 +1,9 @@
 ---
 title: Occult Crescent
 description: 7.0 Field Operations
+tableOfContents:
+  minHeadingLevel: 1
+  maxHeadingLevel: 3
 ---
 
 import { Aside } from '@astrojs/starlight/components';
@@ -25,14 +28,16 @@ Currently, to enter Occult Crescent you must have completed the questline start 
 on a combat job and have a minimum item level of 690. Occult Crescent does sync item levels to 700 as a note! So any materia on gear above i700 will be completely disabled. This is
 important for later when talking about the Field Op's gear progression.
 
-### Phantom Jobs
+## Phantom Jobs
 While exploring the Occult Crescent you can equip various Phantom Jobs that will augment your playstyle in supportive, defensive, or offense ways.
 There are currently 13 available phantom jobs to level and master, each with their own gimmick. With future patches (7.45 and 7.55) more Phantom Jobs will become available to the player.
+
+To learn more about the different phantom jobs, please visit the page dedicated to it [here](/crescent/pjobs/)
 
 <br></br>
 <hr></hr>
 
-### In-Zone Leveling
+## In-Zone Leveling
 Similar to Eureka/Bozja there is a separate leveling system, two this time actually. 
 
 There is your <u>Knowledge Level</u> acting as your overall, more general experience level gained from completing
@@ -183,9 +188,9 @@ Similar to Eureka Bunnies, the Persistent and Pleading Pots FATEs, that when com
 ensuring the Persistent Pot companion you just obtained does not die, the pot will guide around to a hidden coffer. These coffers are either bronze, silver and gold. Each one rarer than the last but containing
 more and more rewards. As of 7.3, pots will now give both enlightenment silver and gold pieces from opening their coffers. 
 <div style="display:flex; justify-content: center;">
-| Coffer | Spawn % | Rewards |
+| Coffer | Spawn % | Currency Rewards |
 | :--: | :--: | :--: |
-| Bronze | 50% | 100 silver, 160 gold|
+| Bronze | 50% | 100 silver, 160 gold |
 | Silver | 40% | 300 silver, 480 gold |
 | Gold | 10% | 1000 silver, 1600 gold |
 </div>
@@ -212,7 +217,6 @@ Occult Crescent, from Persistent Pot coffers, or you could get refunded a carrot
 You can visit <a href="https://gacha.infi.ovh/occult/?territory=3&coffer=2012936" target="_blank">Infi's Gacha Website</a> o see what items can drop from both kinds of coffers and how rare each item is from
 their respective coffer.
 :::
-
 
 <br></br>
 <hr></hr>
@@ -284,4 +288,44 @@ All 7 sets costs...
 
 ### Best in Slot
 Best in slot of Occult Crescent is maximizing the amount of Special Attibute you have. This is currently achieved by wearing a full set of Arcanaut's gear and augmenting it to the +2 version. 
-At max, you should have an extra 600 main stat and 15 special attribute or ~15% more damage on phantom actions.
+At max, you should have an extra 600 main stat and 15 special attribute or ~15% more damage on phantom actions. Some best in slots will also feature various pieces of Neo-Kingdom gear as its
+item level sits right at 700. Allowing materia to be melded and active while inside Occult Crescent. Any non-Neo Kingdom pieces can be substituted for an item of similar substats (Ex: two
+different rings both with Crit AND Determination)
+:::caution[Is Best In Slot Required?]
+**No.** 
+
+Having a perfectly made best in slot set is NOT required to do anything in Occult Crescent or progress in Forked Tower. Some Forked Tower groups may *ask* for an amount of gear, but its only to help make
+DPS checks a little more lenient for the whole group.
+:::
+<br></br>
+<details>
+<summary>Open to see all currently available BiS sheets</summary>
+#### Tanks
+- <a href="https://xivgear.app/?page=sl%7C9ac01a54-51cb-429f-87ff-7cc5e4ca4b5d" target="_blank">Paladin</a> (by Celery)
+- <a href="https://xivgear.app/?page=sl%7Cfdef7aa9-63c4-4a21-a662-80e89c2b47dd" target="_blank">Warrior</a> (from The Balance)
+- <a href="https://xivgear.app/?page=sl%7C2f50f25f-7407-4e54-abbb-cf117dddb657" target="_blank">Dark Knight</a> (by Lynn)
+- <a href="https://xivgear.app/?page=sl%7C237219c9-daff-4ace-8e9a-44488b90b23d" target="_blank">Gunbreaker</a> (by Lynn and Faes) - has 2.5 and 2.45 sets
+#### Healers
+- <a href="https://xivgear.app/?page=sl%7C878e5ad1-9c60-4f77-b556-01c07cba90bb" target="_blank">Omni-Healer</a> (by meyneth3767)
+- <a href="https://xivgear.app/?page=sl%7C744bad81-184d-47fd-9d7d-f489971bcb0c" target="_blank">Scholar</a> (by Celery)
+#### Melee
+- <a href="https://xivgear.app/?page=sl%7Ce7d88947-4cf9-49c6-bbf7-92d6567625a8" target="_blank">Viper</a> (by Ref/Celery)
+- <a href="https://xivgear.app/?page=sl%7Ce40d37a2-cdfe-4750-9a2d-c9b0b2f8c238" target="_blank">Ninja</a> (by Celery)
+- <a href="https://xivgear.app/?page=sl%7C67d9c5cd-dc1f-45c6-8d66-e3708683c255" target="_blank">Dragoon</a> (by Lynn/Celery) - Reaper compatible with minimal losses.
+- <a href="https://xivgear.app/?page=sl%7Ced61963e-702a-4fe0-bccf-5895118d8baa" target="_blank">Reaper</a> (by Lynn) - DRG compatible with minimal losses.
+- <a href="https://xivgear.app/?page=sl%7Cf0ab23e1-840d-464e-a6fa-34649ae11d02" target="_blank">Monk</a> (from The Balance)
+- <a href="https://xivgear.app/?page=sl%7Ccb683646-ae3b-473f-82da-86b1c537b3b0" target="_blank">Samurai</a> (by Ilya and Celery)
+#### Phys. Ranged
+- <a href="https://xivgear.app/?page=sl%7Cd9bfb443-e62d-4744-be6b-ef3d41015b15" target="_blank">Bard</a> (by Shady/mortia)
+- <a href="https://xivgear.app/?page=sl%7Cbf1a8d8c-0cd7-4469-b096-0fb691b9fecc" target="_blank">Dancer</a> (by mortia)
+- <a href="https://xivgear.app/?page=sl%7C64d194d4-af3b-4c01-abe9-bdd94a8848b1" target="_blank">Machinst</a> (by mortia)
+#### Caster
+- <a href="https://xivgear.app/?page=sl%7Cc487f0df-6f9f-4daf-b0b2-54863c1c8202" target="_blank">Black Mage</a> (by Ilya)
+- <a href="https://xivgear.app/?page=sl%7C8c6b1aeb-1799-4153-9aaf-fe3595d08458" target="_blank">Summoner</a> (from The Balance)
+- <a href="https://xivgear.app/?page=sl|ccc7d01e-d95c-459c-87b1-d52124500c45" target="_blank">Pictomancer</a> (from The Balance)
+- <a href="https://xivgear.app/?page=sl%7C12902033-46d7-41be-b0c0-925b541b6329" target="_blank">Red Mage</a> (by Cyn - more credits on sheet)
+
+Your job missing? Want to see it added? Contact `@onlymlems` in Field Op Enjoyers [Discord](/others/discords)
+</details>
+<br></br>
+<hr></hr>
