Fixed up the css and did some other clean up

--- a/src/content/docs/crescent/ftb.mdx
+++ b/src/content/docs/crescent/ftb.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Forked Tower: Blood"
-description: Reccomended Discords for engaging with Field Operations content
+description: "Forked Tower: Blood Resources"
+tableOfContents:
+  minHeadingLevel: 3
 ---
 
 import { Aside } from '@astrojs/starlight/components';
@@ -8,14 +10,6 @@ import { Icon } from '@astrojs/starlight/components';
 import { Image } from 'astro:assets';
 import Footer from '@components/Footer.astro'
 
-
-<link
-  rel="stylesheet"
-  media="(prefers-color-scheme:dark)"
-  href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/themes/dark.css"
-  onload="document.documentElement.classList.add('sl-theme-dark');"
-/>
-<script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
 ## Basics, Entry, etc.
 Forked Tower: Blood is the capstone raid released in 7.25 alongside Occult Crescent: South Horn. It features many difficult encounters designed for a minimum of 24 players to participate in.
 It features limited raising in both methods and a lives sytems along with more gimmicky mechanics that require the usage of specific Phantom Jobs such as Geomancer, Time Mage, and Thief.
