Fixing other things

--- a/src/content/docs/crescent/occult.mdx
+++ b/src/content/docs/crescent/occult.mdx
@@ -309,11 +309,11 @@ DPS checks a little more lenient for the whole group.
 #### Phys. Ranged
 - <a href="https://xivgear.app/?page=sl%7Cd9bfb443-e62d-4744-be6b-ef3d41015b15" target="_blank">Bard</a> (by Shady/mortia)
 - <a href="https://xivgear.app/?page=sl%7Cbf1a8d8c-0cd7-4469-b096-0fb691b9fecc" target="_blank">Dancer</a> (by mortia)
-- <a href="https://xivgear.app/?page=sl%7C64d194d4-af3b-4c01-abe9-bdd94a8848b1" target="_blank">Machinst</a> (by mortia)
+- <a href="https://xivgear.app/?page=sl|b60e60e1-7ce9-467d-9eda-1a9b9e101368" target="_blank">Machinst</a> (by mortia)
 #### Caster
 - <a href="https://xivgear.app/?page=sl%7Cc487f0df-6f9f-4daf-b0b2-54863c1c8202" target="_blank">Black Mage</a> (by Ilya)
 - <a href="https://xivgear.app/?page=sl%7C8c6b1aeb-1799-4153-9aaf-fe3595d08458" target="_blank">Summoner</a> (from The Balance)
-- <a href="https://xivgear.app/?page=sl|ccc7d01e-d95c-459c-87b1-d52124500c45" target="_blank">Pictomancer</a> (from The Balance)
+- <a href="https://xivgear.app/?page=sl|6424d2e4-f692-4d6a-82f2-42c74a248783" target="_blank">Pictomancer</a> (from The Balance)
 - <a href="https://xivgear.app/?page=sl%7C12902033-46d7-41be-b0c0-925b541b6329" target="_blank">Red Mage</a> (by Cyn - more credits on sheet)
 
 Your job missing? Want to see it added? Contact `@onlymlems` in Field Op Enjoyers [Discord](/others/discords)
